# Cuadernos

./: .gitignore  APLICAR.md  APLICAR_CAMBIOS.md  Bibliografia.bib  Makefile  README.md  Template.cls  cuadernos.toml  lstlisting_style.tex  move_pdf.py  plantilla.typ  run_all.py  typst.toml
.cuadernos-backup/20260712-130109/: cli.py  scaffold.py
.images/: firstPageToPng.sh
0_Macros/: Entornos.tex  Indice.tex  Titulo.tex
Base/: Prueba_Cuaderno.typ
DIseño Logico/: Diseño Logico.tex
Deep Learning/: DeepLearning.tex
Deep Learning/Chapters/: 04-Redes Convolucionales.tex  05-Redes Recurrentes.tex
FPGA/: Apuntes.tex  Bibliografia.bib  FPGA.tex  Template.cls
FPGA/Chapters/: 01-FPGA.tex  02-TecnologiaVLSI.tex  03-FPGA.tex  04-VHDL.tex  05-Vivado.tex
Fisica/Astrofisica/: F-Astrofisica.tex  F-Astrofisica.typ
Fisica/DetectoresPartículas/: F-DetectoresPartículas.typ
Fisica/Electrodinamica/: F-Electrodinamica.tex  F-Electrodinamica.typ
Fisica/FIsica_Plasma/: F-FisicaPlasma.typ
Fisica/Fisica_Detectores/: F-Fisica_Detectores.typ
Fisica/Fisica_Particulas/: F-Fisica_Particulas.typ
Fisica/Fisica_Plasma/: F-FisicaPlasma.typ
Fisica/InteraccionRadiacionMateria/: F-IRM.tex  IRM.tex
Fisica/Particulas/: F-Particulas.tex  Particulas.tex
Fisica/TCC/: F-Teoria Cuantica de Campos.tex  Teoria Cuantica de Campos.tex
Ingenieria/Aeroespacial/: I-Aeroespacial.typ
Macros/: Titulo.tex
Plantilla_Cuaderno/: comandos.typ  indice.typ  indice_aux.typ  plantilla.typ  theorems.typ  titulo.typ
Programacion/Particle_Simulation/Chapters/EjemploGarfield/TuboDeriva/: CMakeLists.txt  main.cpp
_Macros/: ColorDefinitions.tex  Entornos.tex  Indice.tex  Titulo.tex
bibliografia/: README.md  catalogo.bib
cuadernos/: README.md  __init__.py  __main__.py
docs/: ARCHITECTURE.md  HEALTH.md  MANIFEST.md  VALIDATION.md  bibliography.json  catalog.json
pdf/: README.md
plantilla/: README.md  plantilla.typ
(+412 files in other folders)
